pricing plans updated

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- set the viewport width and initial-scale on mobile devices -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>FA Design | Virtual to Reality</title>
+	<title>FA Design | Next Generation of Creativity</title>
 	<!-- include the site stylesheet -->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" rel="stylesheet">
 	<!-- include the site stylesheet -->
@@ -216,9 +216,9 @@
 								<div class="col-12 col-sm-6">
 									<!-- abtDesBlock of the page -->
 									<article class="abtDesBlock mb-6">
-										<h3 class="h2 text-primary mb-2 mb-lg-4"><span class="counter">22</span>+</h3>
+										<h3 class="h2 text-primary mb-2 mb-lg-4"><span class="counter">12</span>+</h3>
 										<h4 class="h5 text-capitalize mb-2 mb-md-3">Completed Project</h4>
-										<p>Successfully deployed 20 projects and 2 projects are under construction.</p>
+										<p>Successfully deployed 10 projects and 2 projects are under construction.</p>
 									</article>
 								</div>
 								<div class="col-12 col-sm-6">
@@ -247,7 +247,7 @@
 							<header class="header px-xl-1 mb-10 mb-lg-13">
 								<h3 class="mb-4 mb-xl-6">
 									<strong class="h6 mb-2 mb-sm-3 d-block text-primary font-weight-normal">Our Services</strong>	
-									<strong class="h3 d-block"> Bespoke Company Solutions For Your Business</strong>
+									<strong class="h3 d-block"> Make your Business Online</strong>
 								</h3>
 								<p>What we offer to the clients</p>
 							</header>
@@ -328,9 +328,9 @@
 							<header class="header mb-8 mb-md-10 mb-xl-13">
 								<h4 class="px-lg-20 px-xl-10">
 									<strong class="h6 mb-2 mb-sm-3 d-block text-primary font-weight-normal">Pricing Table</strong>	
-									<strong class="h3 d-block mb-4 mb-xl-5">No Hidden Charges Choose Your Plan</strong>
+									<strong class="h3 d-block mb-4 mb-xl-5">Choose the Plan for your Website</strong>
 								</h4>
-								<p>Choose your best plan for your websites</p>
+								<p>No hidden charges applied</p>
 							</header>
 						</div>
 					</div>
@@ -344,7 +344,7 @@
 								<div class="priceHolder mb-5 mb-xl-7">
 									<h4 class="priceVocherWrap d-flex justify-content-center ml-5 mb-n1">
 										<sub class="currency">LKR</sub>
-										<strong class="price fwSemibold">32,000</strong>
+										<strong class="price fwSemibold">9999</strong>
 										<sup class="pricePrsont"></sup>
 									</h4>
 									<p></p>
@@ -368,7 +368,7 @@
 								<div class="priceHolder mb-5 mb-xl-7">
 									<h4 class="priceVocherWrap d-flex justify-content-center ml-5 mb-n1">
 										<sub class="currency">LKR</sub>
-										<strong class="price fwSemibold">52,000</strong>
+										<strong class="price fwSemibold">24999</strong>
 										<sup class="pricePrsont"></sup>
 									</h4>
 									<p></p>
@@ -395,7 +395,7 @@
 								<div class="priceHolder mb-5 mb-xl-7">
 									<h4 class="priceVocherWrap d-flex justify-content-center ml-5 mb-n1">
 										<sub class="currency">LKR</sub>
-										<strong class="price fwSemibold">72,000</strong>
+										<strong class="price fwSemibold">29999</strong>
 										<sup class="pricePrsont"></sup>
 									</h4>
 									<p></p>
